Giriş kontrolü ve tasarım testleri

--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -18,6 +18,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="84dp"
         android:visibility="visible"
+        app:cardCornerRadius="25px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -74,11 +75,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="84dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
+        app:cardCornerRadius="25px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
