--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="backColor">#006064</color>
     <color name="splashColor">#eeeeee</color>
+    <color name="history_color">#fde434</color>
+    <color name="save_color">#9efd38</color>
 </resources>
