--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,14 +69,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <Chronometer
                 android:id="@+id/sensorView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:text="00:00:00"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -127,7 +127,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView9"
         android:layout_width="180dp"
-        android:layout_height="110dp"
+        android:layout_height="90dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="56dp"
@@ -220,7 +220,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView13"
         android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"
@@ -294,7 +294,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:text="0 W"
+                android:text="0 cal"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -309,7 +309,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:background="@mipmap/power_icon"
+                android:background="@mipmap/energy_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -319,7 +319,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView16"
         android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="8dp"
@@ -372,13 +372,14 @@
         android:layout_width="85dp"
         android:layout_height="48dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="10dp"
+        android:layout_marginStart="16dp"
         android:foreground="@mipmap/history"
         android:foregroundGravity="center_vertical|center_horizontal"
         app:cardBackgroundColor="@color/history_color"
         app:cardCornerRadius="25px"
-        app:layout_constraintEnd_toStartOf="@+id/saveCard"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toStartOf="@+id/rankCard"
         app:layout_constraintStart_toEndOf="@+id/cardView11"
         app:layout_constraintTop_toTopOf="@+id/cardView11">
 
@@ -386,17 +387,36 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/saveCard"
-        android:layout_width="85dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:foreground="@mipmap/save"
         android:foregroundGravity="center_vertical|center_horizontal"
         app:cardBackgroundColor="@color/save_color"
         app:cardCornerRadius="25px"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView14"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hisCard">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/cardView14"
+        app:layout_constraintTop_toBottomOf="@+id/cardView16">
 
     </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/rankCard"
+        android:layout_width="85dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:foreground="@mipmap/hot"
+        android:foregroundGravity="center_vertical|center_horizontal"
+        app:cardBackgroundColor="@color/hot"
+        app:cardCornerRadius="25px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/cardView11" />
 
 </android.support.constraint.ConstraintLayout>
