--- a/app/src/main/res/layout/activity_ranklist.xml
+++ b/app/src/main/res/layout/activity_ranklist.xml
@@ -4,22 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/history_color"
-    tools:context=".HistoryView"
-    android:theme="@style/AppTheme.NoActionBar">
+    android:background="@color/hot"
+    android:theme="@style/AppTheme.NoActionBar"
+    tools:context=".RanklistActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/history_color"
+        android:background="@color/hot"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@mipmap/back"
-        app:title="@string/hist_key" />
+        app:title="@string/rank_key" />
 
     <android.support.v7.widget.CardView
         android:layout_width="0dp"
@@ -34,14 +34,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" >
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ListView
-                android:id="@+id/hist_list"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rank_list"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginBottom="24dp"
