--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#f1f3ff</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+    <color name="colorAccent">#d99bb0</color>
     <color name="backColor">#006064</color>
     <color name="splashColor">#eeeeee</color>
     <color name="history_color">#fde434</color>
     <color name="save_color">#9efd38</color>
+    <color name="hot">#ff8b67</color>
 </resources>
