--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#f1f3ff</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#d99bb0</color>
-    <color name="backColor">#006064</color>
+    <color name="backColor">#35bf73</color>
     <color name="splashColor">#eeeeee</color>
     <color name="history_color">#fde434</color>
     <color name="save_color">#9efd38</color>
