--- a/app/src/main/res/layout/rcard_layout.xml
+++ b/app/src/main/res/layout/rcard_layout.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/txtr_back"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,10 +10,10 @@
         android:id="@+id/txtr_dist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginLeft="125dp"
+        android:layout_marginStart="125dp"
         android:layout_marginTop="8dp"
-        android:text="10 km"
+        android:text="0.105 km"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,8 +22,8 @@
         android:id="@+id/txtr_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:text="00:01:35"
         android:textStyle="bold"
@@ -33,20 +34,20 @@
         android:id="@+id/txtr_speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:text="15 km/h"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/txtr_rev"
+        app:layout_constraintStart_toEndOf="@+id/txtr_co2"
         app:layout_constraintTop_toBottomOf="@+id/txtr_energy" />
 
     <TextView
         android:id="@+id/txtr_energy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:text="30 cal"
         android:textStyle="bold"
@@ -54,23 +55,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtr_rev"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="50 tur"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/txtr_co2"
-        app:layout_constraintTop_toBottomOf="@+id/txtr_energy" />
-
-    <TextView
         android:id="@+id/txtr_co2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:text="2 g CO2"
         android:textSize="12sp"
@@ -82,13 +71,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:text="2 ağaç"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/txtr_dist"
         app:layout_constraintTop_toBottomOf="@+id/txtr_dist"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -97,10 +84,26 @@
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="8dp"
+        android:text="Username"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.49" />
+
+    <TextView
+        android:id="@+id/txtr_rank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Username"
+        android:text="150"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
