--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,8 @@
         android:textColor="@color/colorPrimary"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:fontFamily="sans-serif"
         android:typeface="sans"
+        app:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="@+id/view11"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -38,18 +38,16 @@
         android:id="@+id/cardView11"
         android:layout_width="0dp"
         android:layout_height="210dp"
-        android:layout_marginBottom="240dp"
         android:layout_marginEnd="12dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="12dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         app:cardCornerRadius="25px"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cardView9"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        app:layout_constraintVertical_bias="0.7">
+        app:layout_constraintTop_toBottomOf="@+id/name">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -79,7 +77,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Small"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -211,8 +209,8 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:text="0 km/h"
-                android:textSize="20sp"
+                android:text="15.8 km/h"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -300,7 +298,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
                 android:text="0 cal"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toBottomOf="parent"
